# python-prompt

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  test_prefix_enabled.py  test_prefix_full.py  test_prefix_order.py
.wex/: config.yml
.wex/ai/dev/: notes.md  style.md
.wex/doc/: migrate.md  package.md
.wex/doc/changelog/: 0.0.22.md
.wex/doc/migration/: 0.0.22.md
.wex/knowledge/: package.md
.wex/knowledge/migration/: 0.0.22.md
.wex/knowledge/readme/: basic-usage.md  introduction.md
.wex/python/: .last-commit
benchmarks/: test_benchmark.py
docs/: demo.sh
docs/examples/: all.py  choice.py  confirm.py  exception.py  indentation.py  limits.py  nesting.py  progress.py  screen.py  types.py
examples/: __init__.py  __main__.py  _all.sh  all.py  all_types.py  choice.py  confirm.py  demo.py  error_handling_demo.py  exception_example.py  indentation.py  limits.py  nesting.py  progress.py  screen.py
examples/keyboard/: input_widget.py  input_widget_multiline.py  key_debug.py  measure_lag.py
examples/responses/: abstract_prompt_response_example.py  code_example.py  command_example.py  echo_example.py  frame_example.py  log_example.py
examples/various/: markdown_showcase.py  project_dashboard_example.py
knowledge/readme/: basic-usage.md
tests/: conftest.py  test_error_handling.py  test_io_manager.py
tests/classes/: test_class_indentation_levels.py  test_class_with_io_manager.py  test_class_with_io_methods.py  test_io_manager.py
tests/common/: test_error_context.py  test_prompt_response_segment.py
tests/enums/: test_verbosity_level.py
tests/responses/: test_base_prompt_response.py  test_choice_responses.py  test_list_prompt_response.py  test_multiple_prompt_response.py  test_progress_prompt_response.py  test_properties_prompt_response.py  test_suggestions_prompt_response.py  test_table_prompt_response.py  test_tree_prompt_response.py  test_verbosity.py
tests/various/: test_log_prompt_response.py
wexample_prompt/: io_manager.py
wexample_prompt/common/: color_manager.py  error_context.py  io_manager.py  prompt_context.py  prompt_layout.py  prompt_response.py  prompt_response_line.py  prompt_response_segment.py
wexample_prompt/const/: colors.py  formatting.py  types.py
wexample_prompt/enums/: choice.py  color.py  message_color.py  message_type.py  response_type.py  terminal_color.py  text_style.py  verbosity_level.py
wexample_prompt/example/: abstract_response_example.py  example_class_with_context.py  example_class_with_methods.py
wexample_prompt/formats/: __init__.py  base_format.py  list_format.py  progress_format.py  table_format.py  tree_format.py
wexample_prompt/helpers/: ansi.py  color.py  debug.py  dict_helper.py
wexample_prompt/mixins/: with_indent.py  with_indentation.py  with_io_context.py  with_io_manager.py  with_io_methods.py  with_prompt_context.py  with_required_io_manager.py
wexample_prompt/output/: abstract_output_handler.py  buffer_output_handler.py  stdout_output_handler.py  strout_output_handler.py
wexample_prompt/progress/: __init__.py  step_progress_context.py
wexample_prompt/protocol/: io_handler_protocol.py
wexample_prompt/responses/: __init__.py  abstract_prompt_response.py  base_prompt_response.py  choice_prompt_response.py  dir_picker_prompt_response.py  echo_prompt_response.py  file_picker_prompt_response.py  list_prompt_response.py  log_prompt_response.py  multiple_prompt_response.py  progress_prompt_response.py  properties_prompt_response.py  suggestions_prompt_response.py  table_prompt_response.py  title_prompt_response.py  tree_prompt_response.py
wexample_prompt/testing/: abstract_prompt_message_response_test.py  abstract_prompt_response_test.py  abstract_prompt_test.py  abstract_title_prompt_response_test.py
wexample_prompt/tests/: abstract_prompt_response_test.py  abstract_title_prompt_response_test.py  test_error_context.py  test_error_handling.py  test_io_manager.py  test_prompt_response.py  test_prompt_response_line.py
wexample_prompt/utils/: prompt_response.py  prompt_response_line.py
(+555 files in other folders)
