[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-prompt"
version = "0.0.49"
description = "Helper for your tty interactions"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "colorama",
    "inquirerpy",
    "pydantic>=2,<3",
    "readchar",
    "wexample-helpers==0.0.67",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-prompt"

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "wexample_prompt*",
]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-p wexample_helpers.testing.plugin.runtest_makereport"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_prompt"
from = "src"
