[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-prompt"
version = "0.0.90"
description = "Helper for your tty interactions"
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "colorama",
    "inquirerpy",
    "readchar",
    "wcwidth",
    "wexample-helpers==0.0.78",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-prompt"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = ["*"]
exclude = ["wexample_prompt.testing*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_prompt"
from = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p wexample_helpers.testing.plugin.runtest_makereport"
pythonpath = ["src"]

[tool.coverage.run]
source = ["wexample_prompt"]
omit = ["*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "@abstractmethod"]
